@@ -34,14 +34,9 @@ TEST(HitPair){
 
   double RealZen = 1.570796326794897; // pi/2
   double RealAzi = 0.785398163397448; // pi/4
-
-  std::cerr << "hit1: x="<< pos1.GetX() << ", y=" << pos1.GetY() << ", z=" << pos1.GetZ() << ", t=" << FIRST << std::endl;
-  std::cerr << "hit2: x="<< pos2.GetX() << ", y=" << pos2.GetY() << ", z=" << pos2.GetZ() << ", t=" << LAST << std::endl;
-  std::cerr << "Real Zenith=" << RealZen << ", Real Azimuth=" << RealAzi << std::endl;
-  std::cerr << "Calculated Zen="<<p.GetZenith() << ", Calculated Azimuth=" << p.GetAzimuth() << std::endl;
   
-  ENSURE( p.InTimeWindow(FIRST, length), "Time window check failed. Hits apparently further than 2000 ns apart!");
-  ENSURE( p.InVelocityWindow( 0.1, 1.0), "Outside of velocity window?");
-  ENSURE_DISTANCE(p.GetZenith(), RealZen, 0.001, "Zenith angle failed.");
-  ENSURE_DISTANCE(p.GetAzimuth(), RealAzi, 0.001, "Azimuthal angle failed.");
+  ENSURE(p.InTimeWindow(FIRST, length), "Time window check failed. Hits apparently further than 2000 ns apart!");
+  ENSURE(p.InVelocityWindow(0.1, 1.0), "Outside of velocity window?");
+  ENSURE_DISTANCE(p.GetZenith(), RealZen, 0.001, "Stored zenith angle didn't match the input.");
+  ENSURE_DISTANCE(p.GetAzimuth(), RealAzi, 0.001, "Stored azimuthal angle didn't match the input.");
 }
