@@ -4,9 +4,10 @@
 Release Notes
 =============
 
-July 9, 2019 Michael Larson
+December 6, 2019 Michael Larson
 ---------------------------
--  Fix the tray segment's If option, which apparently has been broken for a long time.
+- Fix the tray segment's If option, which apparently has been broken for a long time.
+- Fix the GCD path for the python test scripts
 
 June 12, 2018 Kevin Meagher
 ---------------------------
